<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detail_fragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/meeting_end_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_white_black_24dp"/>
    </com.google.android.material.appbar.AppBarLayout>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/meeting_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        android:text="@string/meeting_details"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meeting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeting_details_title" />

    <EditText
        android:id="@+id/meeting_title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:hint="@string/hint_subject_title"
        app:layout_constraintBottom_toBottomOf="@+id/meeting_title"
        app:layout_constraintStart_toEndOf="@+id/meeting_title"
        app:layout_constraintTop_toTopOf="@+id/meeting_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:imeOptions="flagNoExtractUi"/>

    <TextView
        android:id="@+id/meeting_subject_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        android:text="@string/subject_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeting_title" />

    <EditText
        android:id="@+id/meeting_subject_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:hint="@string/hint_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeting_subject_title"
        android:importantForAutofill="no"
        android:imeOptions="flagNoExtractUi"/>

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/participants_email"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meeting_subject_input" />

    <LinearLayout
        android:id="@+id/email_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/email_title">

        <EditText
            android:id="@+id/email_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:imeOptions="flagNoExtractUi"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:imeOptions="flagNoExtractUi"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:imeOptions="flagNoExtractUi"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/add_more_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:contentDescription="@string/add_more_email"
        app:layout_constraintBottom_toBottomOf="@+id/email_container"
        app:layout_constraintStart_toEndOf="@+id/email_container"
        app:srcCompat="@drawable/ic_add_box_black_24dp" />

    <ImageButton
        android:id="@+id/delete_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/delete_btn"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/add_more_email"
        app:layout_constraintStart_toEndOf="@id/add_more_email"
        app:layout_constraintTop_toTopOf="@+id/add_more_email"
        app:srcCompat="@drawable/ic_minus_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
    <Button
        android:visibility="gone"
        android:id="@+id/save_meeting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save_meeting"
        android:layout_gravity="bottom|end"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
