<resources>
    <string name="app_name">Ma réu</string>
    <string name="text">email@address.com, email@address.com, email@address.com</string>
    <string name="title_hour_room">"%1$s - %2$s - %3$s"</string>
    <string name="email_hint">email@address.com</string>
    <string name="previous_page">RETOUR</string>
    <string name="no_new_meetings">Aucune réunion de prévue</string>
    <string name="all_meetings_full">Plus de salles disponibles!\nVeuillez choisir une autre date.</string>
    <string name="next_page">Suivant</string>
    <string name="default_recyclerview_title">Réunion A - 14h00 - PEACH</string>
    <string name="delete_btn">delete_btn</string>
    <string name="meeting_icon">meeting_icon</string>

    <string name="create_new_meeting">"     CREER UNE NOUVELLE REUNION      "</string>
    <string name="rooms_available">Salles disponibles :</string>
    <string name="meeting_hour">Heure de la réunion :</string>
    <string name="new_meeting">NOUVELLE REUNION</string>
    <string name="validate">Valider</string>
    <string name="add_more_email">add more email</string>
    <string name="participants_email">Emails des participants :</string>
    <string name="hint_subject">Quel(s) sujet(s) allez vous aborder ?</string>
    <string name="subject_title">Objectif:</string>
    <string name="hint_subject_title">mon titre</string>
    <string name="title">Titre:</string>
    <string name="meeting_details">DETAILS DE LA REUNION</string>
    <string name="choose_a_room">Choisissez votre salle de réunion</string>
    <string name="sort_list">sort list</string>
    <string name="sort_by_hour">"Lister par heure"</string>

    <string name="select_date">"   Choisir une date   "</string>
    <string name="choose_a_date">Choisissez une date de réunion</string>
    <string name="date_selected">"%1$s/%2$s/%3$d"</string>
    <string name="select"><![CDATA[>Selectionner<]]></string>
    <string name="by_room">Par salle :</string>
    <string name="ok">OK</string>
    <string name="by_date">Par date :</string>
    <string name="filter">Filtrer</string>
    <string name="filter_meetings_menu">Filtrer les réunions</string>
    <string name="ascending">croissante</string>
    <string name="descending">décroissante</string>
    <string name="display_all_meetings">Afficher toutes les réunions</string>
    <string name="dummy_subject">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Phasellus et nisi suscipit, pulvinar lectus vitae, sagittis tortor.
        Nullam sit amet felis euismod, facilisis sem quis.
    </string>

    <string name="emails">maxime@lamzone.com\nalex@lamzone.com\nviviane@lamzone.com</string>
    <string name="participants">Participants:</string>
    <string name="dummy_room">Salle Peach</string>
    <string name="dummy_meeting_name">Réunion A</string>
    <string name="dummy_hour">à 8h00</string>
    <string name="dummy_date">le 18 Avril 2020\n à 8h00</string>

    <string name="detail_date_hour">le %1$s\nà %2$s</string>
    <string name="detail_room">Salle %s</string>
    <string name="date_title">Date :</string>
    <string name="save_meeting">Enregistrer</string>
    <string name="write_in_this_area">Veuillez remplir ce champs</string>
    <string name="invalid_email">Addresse email invalide !</string>
    <string name="meeting_saved">Réunion enregistrée !</string>
    <string name="choose_date_or_room">Choisissez une date et/ou une salle</string>
    <string name="filtered_date_only">"Réunions du %s</string>
    <string name="filtered_room_only">"Réunions en salle %s</string>
    <string name="filtered_date_and_room">"Réunions du %1$s en salle %2$s</string>
    <string name="default_filterview_text">Réunions du 13/03/20 en salle Peach</string>
    <string name="deactivate_filter">Désactiver le filtre</string>
    <string name="cancel_sorted_list">"Désactiver le tri"</string>
    <string name="sort_by_hour_default">Triées par heure croissante</string>
    <string name="sort_by_hour_selected">Triées par heure %s</string>

    <string-array name="room_names">
        <item>Peach</item>
        <item>Luigi</item>
        <item>Mario</item>
        <item>Bowser</item>
        <item>Waluigi</item>
        <item>Daisy</item>
        <item>Wario</item>
        <item>Rosalina</item>
        <item>Toad</item>
        <item>Yoshi</item>
    </string-array>

    <string-array name="hour_list">
        <item>8h00</item>
        <item>9h00</item>
        <item>10h00</item>
        <item>11h00</item>
        <item>12h00</item>
        <item>13h00</item>
        <item>14h00</item>
        <item>15h00</item>
        <item>16h00</item>
        <item>17h00</item>
        <item>18h00</item>
        <item>19h00</item>
    </string-array>
</resources>
